crates/biome_cli/tests/snapshots/main_cases_config_extends/applies_extended_values_in_current_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js
```

## `biome.json`

```json
{ "extends": ["format.json"], "formatter": { "lineWidth": 20 } }
```

## `format.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `test.js`

```js
debugger;
const a = [
	'lorem',
	'ipsum',
];

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
