crates/biome_cli/tests/snapshots/main_cases_config_extends/extends_config_by_moving_double_star_at_the_beginning_from_extend_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "extends": ["shared.json"],
  "files": {
    "includes": ["!components"]
  }
}
```

## `components/test.js`

```js
debugger; const a = 0;
```

## `dist/test.js`

```js
debugger; const a = 0;
```

## `shared.json`

```json
{
            "files": {
                "includes": ["**", "!**/dist"]
            }
        }
```

## `trigger.js`

```js
debugger; const a = 0;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
trigger.js:1:17 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable a is unused.
  
  > 1 │ debugger; const a = 0;
      │                 ^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend a with an underscore.
  
  - debugger;·const·a·=·0;
  + debugger;·const·_a·=·0;
  

```

```block
trigger.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger; const a = 0;
      │ ^^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;·const·a·=·0;
      │ ----------            

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
