crates/biome_cli/tests/snapshots/main_cases_config_extends/extends_config_ok_from_biome_manifest.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome check test.js
```

## `biome.json`

```json
{ "extends": ["@shared/config/configs/recommended"] }
```

## `node_modules/@shared/config/biome-manifest.json`

```json
{
    "version": 1,
    "configs": [{ "recommended": "./recommended.json" }]
}
```

## `node_modules/@shared/config/package.json`

```json
{
    "name": "@shared/config",
    "exports": {
        "biome": "./biome-manifest.json",
        "default": "./index.js"
    }
}
```

## `node_modules/@shared/config/recommended.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `test.js`

```js
console.log("string");
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - console.log("string");
      1 │ + console.log('string');
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
