crates/biome_cli/tests/snapshots/main_cases_config_extends/extends_config_ok_from_npm_package_with_author_field.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check test.js
```

## `biome.json`

```json
{ "extends": ["@shared/format/biome", "@shared/linter/biome"] }
```

## `node_modules/@shared/format/biome.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `node_modules/@shared/linter/biome.jsonc`

```json
{ "linter": { "enabled": false } }
```

## `node_modules/@shared/format/package.json`

```json
{
    "name": "@shared/format",
    "author": "this breaks extending biome",
    "exports": {
        "./biome": "./biome.json"
    }
}
```

## `node_modules/@shared/linter/package.json`

```json
{
    "name": "@shared/linter",
    "exports": {
        "./biome": "./biome.jsonc"
    }
}
```

## `test.js`

```js
debugger; console.log("string"); 
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - debugger;·console.log("string");·
      1 │ + debugger;
      2 │ + console.log('string');
      3 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
